2007-02-21  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.0.5

2007-02-21  Michael Stucki  <michael@typo3.org>

	* Security fix: Email injection vulnerability in t3lib_formmail (reported and fixed by Andreas Otto and Thorsten Kahler)

2007-02-20  Michael Stucki  <michael@typo3.org>

	* Fixed bug in EM: Insecure extensions were still displayed (patch by Karsten Dambekalns)
	* Fixed a typo in typo3/sysext/install/mod/class.tx_install.php
	* Fixed bug #4207: User>Workspaces shows users pages where they have no access to (patch by Martin Kutschker)

2007-02-15  Michael Stucki  <michael@typo3.org>

	* Reverted fix for bug #4689 (closes #4987): Fix seems to cause problems, reinvestiation is needed

2007-02-15  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fix: Display description of options in install tool correctly

2007-02-14  Rupert Germann  <rupi@gmx.li>

	* Fix: Excluded the adminPanel GETvars from t3lib_div::cHashParams to prevent a cHash mismatch

2007-02-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #4423: BE search doesn't work with UTF-8 chars (thanks to John Angel)

2007-02-07  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4883: mod_rewrite rules rewrite missing favicon.ico to index.php (thanks to Stefan Geith for this hint - notice that manual modification of existing .htaccess files might be neccessary)

2007-02-06  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3069 again: Ignore version check if no requirements are specified
	* Fixed bug #4689: Error while entering a numbers like 50 or 50.00 into a double2 field

2007-02-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3069: Extension manager crashed because of some PHP bug with version_compare() (thanks to Rainer Haertlein who discovered the solution to this problem)
	* Changed t3lib_basicFileFunctions to use filemtime() instead of filectime()

2007-01-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>
