@@ -1,3 +1,8 @@
+
+2007-02-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>
+
+	* Fixed bug #3666: permissions of versioned pages are not changed in draft workspace (patch by Andreas Wolf)
+
 2007-02-21  Ingmar Schlecht  <ingmar@typo3.org>
 
 	* Release of TYPO3 4.0.5
